osprey_worker/src/osprey/engine/query_language/tests/test_did_mutate_label/test_did_mutate_label_fails[DidAddLabel(entity_type='MyEntity', label_name='invalid_label')].txt
error: unknown label
--> main.sml:1:47
     |
   1 | DidAddLabel(entity_type='MyEntity', label_name='invalid_label')
     |                                                ^ there is no `invalid_label` label in the config
